deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: github-ranked
  labels:
    app.kubernetes.io/name: github-ranked
