deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: github-ranked
  namespace: github-ranked
  labels:
    app.kubernetes.io/name: github-ranked
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: github-ranked
  ports:
    - name: http
      port: 80
      targetPort: http
